--- a/libPlayer/src/main/res/values/strings.xml
+++ b/libPlayer/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="desc_rotate_right">Rotate Right</string>
     <string name="desc_lock_slider">Lock Slider</string>
     <string name="desc_unlock_slider">Unlick Slider</string>
+    <string name="desc_volume_button">Volume</string>
 </resources>
