--- a/libPlayer/src/main/res/values/strings.xml
+++ b/libPlayer/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="desc_lock_slider">Lock Slider</string>
     <string name="desc_unlock_slider">Unlick Slider</string>
     <string name="desc_volume_button">Volume</string>
+    <string name="photo">Photo</string>
 </resources>
