--- a/libPlayer/src/main/res/values/strings.xml
+++ b/libPlayer/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="desc_unlock_slider">Unlick Slider</string>
     <string name="desc_volume_button">Volume</string>
     <string name="photo">Photo</string>
+    <string name="snapshot_capture_player_screen">Capture Screen</string>
+    <string name="snapshot_extract_frame">Extract Frame</string>
 </resources>
